@@ -81,8 +81,11 @@ class LadybugModel extends ObservableS {
       ladybug.setVelocity(new Vector2D(motion2DModel.getXVel, motion2DModel.getYVel) * vscale)
       ladybug.setAcceleration(new Vector2D(motion2DModel.getXAcc, motion2DModel.getYAcc) * ascale)
 
-      def debug = {println(time + "\t" + ladybug.getPosition.x + "\t" + ladybug.getVelocity.x + "\t" + ladybug.getAcceleration.x)}
+//      def debug = {println(time + "\t" + ladybug.getPosition.x + "\t" + ladybug.getVelocity.x + "\t" + ladybug.getAcceleration.x)}
 //      debug
+//      0+1
+//      println("y="+ladybug.getPosition.y)
+
     } else {
       ladybug.setVelocity(new Vector2D)
       ladybug.setAcceleration(new Vector2D)
